worked on 2 search methods